--- a/src/css/App.css
+++ b/src/css/App.css
@@ -1,4 +1,5 @@
 html, body {
+	background-color: #F8FAFA;
 	font-size: 18px;
 	width: 100vw;
 	height: 100vh;
@@ -36,6 +37,11 @@ p {
 
 a {
 	color: #61dafb;
+}
+
+button {
+	background-color: transparent;
+	border-style: none;
 }
 
 .Mood {
